[package]
name = "repulse"
version = "0.1.0"
authors = ["bigbass1997 <bigbass1997.website@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tungstenite = "0.13.0"
reqwest = { version = "0.11.2", features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
rouille = "3.0.0"
chrono = "0.4.19"