[package]
name = "repulse"
version = "0.2.0"
authors = ["bigbass1997 <bigbass1997.website@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.14"
tungstenite = "0.13.0"
reqwest = { version = "0.11.2", features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
rouille = "3.0.0"
chrono = "0.4"
websocket = "0.26"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"